--- a/app/src/main/res/layout/activity_test_task.xml
+++ b/app/src/main/res/layout/activity_test_task.xml
@@ -64,10 +64,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="finished_queue"/>
+                android:text="failed_queue"/>
 
             <TextView
-                android:id="@+id/tv_finished"
+                android:id="@+id/tv_failed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
