--- a/app/src/main/res/layout/activity_test_task.xml
+++ b/app/src/main/res/layout/activity_test_task.xml
@@ -91,4 +91,10 @@
         android:layout_height="wrap_content"
         android:text="add_task"/>
 
+    <Button
+        android:id="@+id/btn_cancel_all"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="cancel_all"/>
+
 </LinearLayout>
