--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,18 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="com.xybean.taskmanager.MainActivity">
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/btn_task_manager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="test"/>
+
+    <Button
+        android:id="@+id/btn_test_download"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test_download"/>
 
 </LinearLayout>
