--- a/app/src/main/res/layout/activity_test_task.xml
+++ b/app/src/main/res/layout/activity_test_task.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.xybean.taskmanager.TestTaskActivity">
+    tools:context=".TestTaskActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
